--- a/iphone/Maps/LocalizedStrings/ar.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ar.lproj/Localizable.strings
@@ -1844,3 +1844,5 @@
 "offline_place_page_more_information" = "اتصل بالإنترنت للحصول على مزيد من التفاصيل حول المكان.";
 
 "failed_load_information" = "فشل تحميل المعلومات.";
+
+"booking_search" = "Booking.com";
