--- a/iphone/Maps/LocalizedStrings/cs.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/cs.lproj/Localizable.strings
@@ -1844,3 +1844,5 @@
 "offline_place_page_more_information" = "Připojte se k Internetu a získejte více informací o tomto místě.";
 
 "failed_load_information" = "Nepodařilo se načíst informace.";
+
+"booking_search" = "Booking.com";
