--- a/iphone/Maps/LocalizedStrings/nb.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/nb.lproj/Localizable.strings
@@ -1844,3 +1844,5 @@
 "offline_place_page_more_information" = "Koble til internett for å få mer informasjon om stedet.";
 
 "failed_load_information" = "Kunne ikke laste inn informasjon.";
+
+"booking_search" = "Booking.com";
