--- a/iphone/Maps/LocalizedStrings/nl.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/nl.lproj/Localizable.strings
@@ -1844,3 +1844,5 @@
 "offline_place_page_more_information" = "Maak verbinding met het internet om meer informatie over de plaats te krijgen.";
 
 "failed_load_information" = "Informatie laden mislukt.";
+
+"booking_search" = "Booking.com";
