--- a/iphone/Maps/LocalizedStrings/pt.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/pt.lproj/Localizable.strings
@@ -1844,3 +1844,5 @@
 "offline_place_page_more_information" = "Efetue ligação à internet para obter mais informações sobre o local.";
 
 "failed_load_information" = "Falha ao carregar informações.";
+
+"booking_search" = "Booking.com";
