--- a/iphone/Maps/LocalizedStrings/ro.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ro.lproj/Localizable.strings
@@ -1844,3 +1844,5 @@
 "offline_place_page_more_information" = "Conectați-vă la internet pentru a primi mai multe informații despre locație.";
 
 "failed_load_information" = "Încărcarea informațiilor a eșuat.";
+
+"booking_search" = "Booking.com";
