--- a/iphone/Maps/LocalizedStrings/sk.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/sk.lproj/Localizable.strings
@@ -1844,3 +1844,5 @@
 "offline_place_page_more_information" = "Viac informácií o mieste získate po pripojení na internet.";
 
 "failed_load_information" = "Nepodarilo sa načítať informácie.";
+
+"booking_search" = "Booking.com";
