--- a/iphone/Maps/LocalizedStrings/tr.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/tr.lproj/Localizable.strings
@@ -1844,3 +1844,5 @@
 "offline_place_page_more_information" = "Yerle ilgili daha fazla bilgi almak için internete bağlanın.";
 
 "failed_load_information" = "Bilgiler yüklenemedi.";
+
+"booking_search" = "Booking.com";
