--- a/iphone/Maps/LocalizedStrings/vi.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/vi.lproj/Localizable.strings
@@ -1844,3 +1844,5 @@
 "offline_place_page_more_information" = "Kết nối đến Internet để xem thêm thông tin về địa điểm này.";
 
 "failed_load_information" = "Không thể tải thông tin.";
+
+"booking_search" = "Booking.com";
