--- a/iphone/Maps/LocalizedStrings/zh-Hant.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/zh-Hant.lproj/Localizable.strings
@@ -1844,3 +1844,5 @@
 "offline_place_page_more_information" = "連上網路以取得關於地點的更多資訊。";
 
 "failed_load_information" = "無法載入資訊。";
+
+"booking_search" = "Booking.com";
