--- a/android/res/values-es/strings.xml
+++ b/android/res/values-es/strings.xml
@@ -1059,4 +1059,5 @@
 	<string name="reviews_on_bookingcom">Más valoraciones en Booking.com</string>
 	<string name="offline_place_page_more_information">Conéctese a internet para obtener más información sobre este lugar.</string>
 	<string name="failed_load_information">No se ha podido cargar la información.</string>
+	<string name="booking_search">Booking.com</string>
 </resources>
