--- a/android/res/values-nb/strings.xml
+++ b/android/res/values-nb/strings.xml
@@ -1064,4 +1064,5 @@
 	<string name="reviews_on_bookingcom">Flere anmeldelser på Booking.com</string>
 	<string name="offline_place_page_more_information">Koble til internett for å få mer informasjon om stedet.</string>
 	<string name="failed_load_information">Kunne ikke laste inn informasjon.</string>
+	<string name="booking_search">Booking.com</string>
 </resources>
