--- a/android/res/values-ro/strings.xml
+++ b/android/res/values-ro/strings.xml
@@ -1062,4 +1062,5 @@
 	<string name="reviews_on_bookingcom">Mai multe recenzii pe Booking.com</string>
 	<string name="offline_place_page_more_information">Conectați-vă la internet pentru a primi mai multe informații despre locație.</string>
 	<string name="failed_load_information">Încărcarea informațiilor a eșuat.</string>
+	<string name="booking_search">Booking.com</string>
 </resources>
