--- a/android/res/values-vi/strings.xml
+++ b/android/res/values-vi/strings.xml
@@ -1066,4 +1066,5 @@
 	<string name="reviews_on_bookingcom">Xem thêm đánh giá trên Booking.com</string>
 	<string name="offline_place_page_more_information">Kết nối đến Internet để xem thêm thông tin về địa điểm này.</string>
 	<string name="failed_load_information">Không thể tải thông tin.</string>
+	<string name="booking_search">Booking.com</string>
 </resources>
