--- a/iphone/Maps/LocalizedStrings/it.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/it.lproj/Localizable.strings
@@ -1844,3 +1844,5 @@
 "offline_place_page_more_information" = "Connettiti a Internet per ottenere maggiori informazioni sul luogo.";
 
 "failed_load_information" = "Impossibile caricare le informazioni.";
+
+"booking_search" = "Booking.com";
