--- a/iphone/Maps/LocalizedStrings/ru.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ru.lproj/Localizable.strings
@@ -1846,3 +1846,9 @@
 "failed_load_information" = "Не удалось загрузить информацию.";
 
 "booking_search" = "Booking.com";
+
+"updating_maps" = "Обновляем карты";
+
+"update_maps_ask" = "Обновите ваши загруженные карты";
+
+"update_maps_notice" = "Обновление карт поддерживает информацию об объектах в актуальном состоянии";
