--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -1093,4 +1093,7 @@
 	<string name="offline_place_page_more_information">Connect to the internet to get more information about the place.</string>
 	<string name="failed_load_information">Failed to load information.</string>
 	<string name="booking_search">Booking.com</string>
+	<string name="updating_maps">Updating maps</string>
+	<string name="update_maps_ask">Update your downloaded maps</string>
+	<string name="update_maps_notice">Update maps supports information about objects in the current state</string>
 </resources>
