--- a/iphone/Maps/LocalizedStrings/zh-Hant.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/zh-Hant.lproj/Localizable.strings
@@ -1846,3 +1846,9 @@
 "failed_load_information" = "無法載入資訊。";
 
 "booking_search" = "Booking.com";
+
+"updating_maps" = "Updating maps";
+
+"update_maps_ask" = "Update your downloaded maps";
+
+"update_maps_notice" = "Update maps supports information about objects in the current state";
