--- a/iphone/Maps/LocalizedStrings/ru.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ru.lproj/Localizable.strings
@@ -1847,8 +1847,12 @@
 
 "booking_search" = "Booking.com";
 
-"updating_maps" = "Обновляем карты";
+"whats_new_auto_update_updating_maps" = "Обновляем карты";
 
-"update_maps_ask" = "Обновите ваши загруженные карты";
+"whats_new_auto_update_title" = "Обновите ваши загруженные карты";
 
-"update_maps_notice" = "Обновление карт поддерживает информацию об объектах в актуальном состоянии";
+"whats_new_auto_update_message" = "Обновление карт поддерживает информацию об объектах в актуальном состоянии";
+
+"whats_new_auto_update_button_size" = "Обновить (%s)";
+
+"whats_new_auto_update_button_later" = "Обновить вручную позже";
