--- a/iphone/Maps/LocalizedStrings/pl.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/pl.lproj/Localizable.strings
@@ -1847,8 +1847,12 @@
 
 "booking_search" = "Booking.com";
 
-"updating_maps" = "Updating maps";
+"whats_new_auto_update_updating_maps" = "Updating maps";
 
-"update_maps_ask" = "Update your downloaded maps";
+"whats_new_auto_update_title" = "Update your downloaded maps";
 
-"update_maps_notice" = "Update maps supports information about objects in the current state";
+"whats_new_auto_update_message" = "Update maps supports information about objects in the current state";
+
+"whats_new_auto_update_button_size" = "Update (%s)";
+
+"whats_new_auto_update_button_later" = "Manually update later";
