--- a/android/res/values-ru/strings.xml
+++ b/android/res/values-ru/strings.xml
@@ -308,6 +308,7 @@
 	<string name="prefs_languages_information">Написать о том когда вообще ничего не установлено\n\nНа Android голосовые подсказки доступны на 24 языках: русский, английский, арабский, венгерский, голландский, греческий, датский, индонезийский, испанский, итальянский, китайский (традиционный и упрощенный), корейский, немецкий, польский, португальский, румынский, тайский, турецкий, финский, французский, хинди, чешский, японский.\n\nВозможно, для некоторых языков вам необходимо будет установить сторонний синтезатор речи и дополнительный языковой пакет из магазина приложений (Google Play Маркет, Samsung Apps и др.).</string>
 	<!-- Settings languages off information in voice instructions screen -->
 	<string name="prefs_languages_information_off">For some languages, you will need to install a other speech synthesizer or an additional language pack from the app store (Google Play Market, Samsung Apps).\n\nOpen your device\&#39;s settings –&gt; Language and input –&gt; Speech –&gt; Text to speech output.*\n\nHere you can manage settings for speech synthesis (for example, download language pack for offline use) and select another text-to-speech engine.</string>
+	<string name="prefs_languages_information_off_link">Для получения дополнительной информации, пожалуйста, ознакомьтесь с руководством.</string>
 	<!-- Settings screen: "Map" category title -->
 	<string name="prefs_group_map">Карта</string>
 	<!-- Settings screen: "Miscellaneous" category title -->
