[strings] Added hotel filters type string

--- a/android/res/values-ru/strings.xml
+++ b/android/res/values-ru/strings.xml
@@ -1095,5 +1095,5 @@
 	<string name="search_hotel_filter_hostel">Хостел</string>
 	<string name="search_hotel_filter_resort">Дом отдыха</string>
 	<string name="search_hotel_filter_motel">Мотель</string>
-	<string name="booking_filters_type">Тип</string>
+	<string name="search_hotel_filters_type">Тип</string>
 </resources>
