--- a/iphone/Maps/LocalizedStrings/uk.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/uk.lproj/Localizable.strings
@@ -1871,4 +1871,8 @@
 
 "search_hotel_filter_motel" = "Motel";
 
-"booking_filters_type" = "Type";
+"create_campaign_button" = "Create ad campaign";
+
+"view_campaign_button" = "View ad campagain";
+
+"search_hotel_filters_type" = "Type";
