--- a/iphone/Maps/LocalizedStrings/en-GB.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/en-GB.lproj/Localizable.strings
@@ -1652,7 +1652,7 @@
 
 "booking_filters_reset" = "Reset";
 
-"booking_filters_rating" = "Rating";
+"booking_filters_rating" = "Rating from";
 
 "booking_filters_rating_any" = "Any";
 
