--- a/iphone/Maps/LocalizedStrings/ru.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ru.lproj/Localizable.strings
@@ -1652,7 +1652,7 @@
 
 "booking_filters_reset" = "Сбросить";
 
-"booking_filters_rating" = "Рейтинг";
+"booking_filters_rating" = "Рейтинг с";
 
 "booking_filters_rating_any" = "Любой";
 
