--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -1087,6 +1087,8 @@
 	<string name="whatsnew_waypoints_message">Tap places to add waypoints to your route.</string>
 	<string name="whatsnew_driving_style_title">New Map Style for Driving</string>
 	<string name="whatsnew_driving_style_message">Car navigation mode got easier to use.</string>
+	<string name="whatsnew_transliteration_title">Transliteration</string>
+	<string name="whatsnew_transliteration_message">Transliteration message</string>
 	<string name="more_on_bookingcom">More on Booking.com</string>
 	<string name="details_on_bookingcom">Details on Booking.com</string>
 	<string name="reviews_on_bookingcom">More reviews on Booking.com</string>
