--- a/iphone/Maps/LocalizedStrings/ja.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ja.lproj/Localizable.strings
@@ -1835,6 +1835,10 @@
 
 "whatsnew_driving_style_message" = "カーナビゲーションモードの使用がより簡単になりました。";
 
+"whatsnew_transliteration_title" = "Transliteration";
+
+"whatsnew_transliteration_message" = "Transliteration message";
+
 "more_on_bookingcom" = "さらに Booking.com で表示";
 
 "details_on_bookingcom" = "Booking.com で詳細表示";
