--- a/iphone/Maps/LocalizedStrings/nl.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/nl.lproj/Localizable.strings
@@ -1835,6 +1835,10 @@
 
 "whatsnew_driving_style_message" = "Modus autonavigatie is eenvoudiger te gebruiken.";
 
+"whatsnew_transliteration_title" = "Transliteration";
+
+"whatsnew_transliteration_message" = "Transliteration message";
+
 "more_on_bookingcom" = "Meer op Booking.com";
 
 "details_on_bookingcom" = "Details op Booking.com";
