--- a/iphone/Maps/LocalizedStrings/ro.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ro.lproj/Localizable.strings
@@ -1835,6 +1835,10 @@
 
 "whatsnew_driving_style_message" = "Modul de navigare din mașină este acum mai ușor de utilizat.";
 
+"whatsnew_transliteration_title" = "Transliteration";
+
+"whatsnew_transliteration_message" = "Transliteration message";
+
 "more_on_bookingcom" = "Mai multe pe Booking.com";
 
 "details_on_bookingcom" = "Detalii pe Booking.com";
