--- a/iphone/Maps/LocalizedStrings/th.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/th.lproj/Localizable.strings
@@ -1835,6 +1835,10 @@
 
 "whatsnew_driving_style_message" = "โหมดการนำทางรถยนต์ใช้งานได้ง่ายยิ่งขึ้น";
 
+"whatsnew_transliteration_title" = "Transliteration";
+
+"whatsnew_transliteration_message" = "Transliteration message";
+
 "more_on_bookingcom" = "เพิ่มเติมบน Booking.com";
 
 "details_on_bookingcom" = "รายละเอียดบน Booking.com";
