--- a/iphone/Maps/LocalizedStrings/zh-Hans.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/zh-Hans.lproj/Localizable.strings
@@ -1835,6 +1835,10 @@
 
 "whatsnew_driving_style_message" = "汽车导航模式更加易用。";
 
+"whatsnew_transliteration_title" = "Transliteration";
+
+"whatsnew_transliteration_message" = "Transliteration message";
+
 "more_on_bookingcom" = "Booking.com 上的更多信息";
 
 "details_on_bookingcom" = "Booking.com 上的详细信息";
