--- a/android/res/values-ro/strings.xml
+++ b/android/res/values-ro/strings.xml
@@ -1068,4 +1068,5 @@
 	<string name="search_hotel_filter_guest_house">Pensiune</string>
 	<string name="search_hotel_filter_hostel">Hostel</string>
 	<string name="search_hotel_filter_resort">Stațiuni</string>
+	<string name="search_hotel_filter_hotel">Hotel</string>
 </resources>
