--- a/android/res/values-uk/strings.xml
+++ b/android/res/values-uk/strings.xml
@@ -1076,4 +1076,5 @@
 	<string name="search_hotel_filter_guest_house">Гостинний дім</string>
 	<string name="search_hotel_filter_hostel">Хостел</string>
 	<string name="search_hotel_filter_resort">Будинок відпочинку</string>
+	<string name="search_hotel_filter_hotel">Готель</string>
 </resources>
