--- a/android/res/values-da/strings.xml
+++ b/android/res/values-da/strings.xml
@@ -1076,4 +1076,5 @@
 	<string name="search_hotel_filter_guest_house">Gæstehus</string>
 	<string name="search_hotel_filter_hostel">Hostel</string>
 	<string name="search_hotel_filter_resort">Resort</string>
+	<string name="search_hotel_filter_hotel">Hotel</string>
 </resources>
