--- a/android/res/values-es/strings.xml
+++ b/android/res/values-es/strings.xml
@@ -1065,4 +1065,5 @@
 	<string name="search_hotel_filter_guest_house">Casa de huéspedes</string>
 	<string name="search_hotel_filter_hostel">Albergue juvenil</string>
 	<string name="search_hotel_filter_resort">Resort</string>
+	<string name="search_hotel_filter_hotel">Hotel</string>
 </resources>
