--- a/android/res/values-hu/strings.xml
+++ b/android/res/values-hu/strings.xml
@@ -1072,4 +1072,5 @@
 	<string name="search_hotel_filter_guest_house">Vendégház</string>
 	<string name="search_hotel_filter_hostel">Hostel</string>
 	<string name="search_hotel_filter_resort">Resort hotel</string>
+	<string name="search_hotel_filter_hotel">Szálloda</string>
 </resources>
