--- a/android/res/values-in/strings.xml
+++ b/android/res/values-in/strings.xml
@@ -1071,4 +1071,5 @@
 	<string name="search_hotel_filter_guest_house">Wisma tamu</string>
 	<string name="search_hotel_filter_hostel">Hostel</string>
 	<string name="search_hotel_filter_resort">Sanggraloka</string>
+	<string name="search_hotel_filter_hotel">Hotel</string>
 </resources>
