--- a/android/res/values-it/strings.xml
+++ b/android/res/values-it/strings.xml
@@ -1071,4 +1071,5 @@
 	<string name="search_hotel_filter_guest_house">Guest house</string>
 	<string name="search_hotel_filter_hostel">Ostello</string>
 	<string name="search_hotel_filter_resort">Resort</string>
+	<string name="search_hotel_filter_hotel">Hôtel</string>
 </resources>
