--- a/android/res/values-ja/strings.xml
+++ b/android/res/values-ja/strings.xml
@@ -1071,4 +1071,5 @@
 	<string name="search_hotel_filter_guest_house">ゲストハウス</string>
 	<string name="search_hotel_filter_hostel">ホステル</string>
 	<string name="search_hotel_filter_resort">リゾート</string>
+	<string name="search_hotel_filter_hotel">ホテル</string>
 </resources>
