--- a/android/res/values-nl/strings.xml
+++ b/android/res/values-nl/strings.xml
@@ -1072,4 +1072,5 @@
 	<string name="search_hotel_filter_guest_house">Gasthuis</string>
 	<string name="search_hotel_filter_hostel">Hostel</string>
 	<string name="search_hotel_filter_resort">Complex</string>
+	<string name="search_hotel_filter_hotel">Hotel</string>
 </resources>
