--- a/android/res/values-pl/strings.xml
+++ b/android/res/values-pl/strings.xml
@@ -1077,4 +1077,5 @@
 	<string name="search_hotel_filter_guest_house">Pensjonat</string>
 	<string name="search_hotel_filter_hostel">Hostel</string>
 	<string name="search_hotel_filter_resort">Dom wczasowy</string>
+	<string name="search_hotel_filter_hotel">Hotel</string>
 </resources>
