--- a/android/res/values-pt/strings.xml
+++ b/android/res/values-pt/strings.xml
@@ -1070,4 +1070,5 @@
 	<string name="search_hotel_filter_guest_house">Casa de hóspedes</string>
 	<string name="search_hotel_filter_hostel">Hostel</string>
 	<string name="search_hotel_filter_resort">Resort</string>
+	<string name="search_hotel_filter_hotel">Hotel</string>
 </resources>
