--- a/android/res/values-vi/strings.xml
+++ b/android/res/values-vi/strings.xml
@@ -1072,4 +1072,5 @@
 	<string name="search_hotel_filter_guest_house">Nhà khách</string>
 	<string name="search_hotel_filter_hostel">Nhà trọ</string>
 	<string name="search_hotel_filter_resort">Khu nghỉ dưỡng</string>
+	<string name="search_hotel_filter_hotel">Khách sạn</string>
 </resources>
