--- a/android/res/values-zh/strings.xml
+++ b/android/res/values-zh/strings.xml
@@ -1078,4 +1078,5 @@
 	<string name="search_hotel_filter_guest_house">招待所์|์旅馆์|์旅社|旅店</string>
 	<string name="search_hotel_filter_hostel">旅馆</string>
 	<string name="search_hotel_filter_resort">度假村</string>
+	<string name="search_hotel_filter_hotel">旅店</string>
 </resources>
