--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -1106,6 +1106,7 @@
 	<string name="search_hotel_filter_guest_house">Guest House</string>
 	<string name="search_hotel_filter_hostel">Hostel</string>
 	<string name="search_hotel_filter_resort">Resort</string>
+	<string name="search_hotel_filter_hotel">Hotel</string>
 	<string name="search_hotel_filter_motel">Motel</string>
 	<string name="create_campaign_button">Create ad campaign</string>
 	<string name="view_campaign_button">View ad campagain</string>
