--- a/iphone/Maps/LocalizedStrings/ko.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ko.lproj/Localizable.strings
@@ -1873,6 +1873,8 @@
 
 "search_hotel_filter_resort" = "리조트";
 
+"search_hotel_filter_hotel" = "호텔";
+
 "search_hotel_filter_motel" = "Motel";
 
 "create_campaign_button" = "Create ad campaign";
