--- a/iphone/Maps/LocalizedStrings/ru.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ru.lproj/Localizable.strings
@@ -1873,6 +1873,8 @@
 
 "search_hotel_filter_resort" = "Дом отдыха";
 
+"search_hotel_filter_hotel" = "Гостиница";
+
 "search_hotel_filter_motel" = "Мотель";
 
 "create_campaign_button" = "Create ad campaign";
