--- a/iphone/Maps/LocalizedStrings/zh-Hans.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/zh-Hans.lproj/Localizable.strings
@@ -1873,6 +1873,8 @@
 
 "search_hotel_filter_resort" = "度假村";
 
+"search_hotel_filter_hotel" = "旅店";
+
 "search_hotel_filter_motel" = "Motel";
 
 "create_campaign_button" = "Create ad campaign";
